fix z-index

--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -12,7 +12,7 @@ nav {
   font-size: 25px;
   font-weight: bold;
   position: fixed;
-  z-index: 5;
+  z-index: 8;
 }
 
 img {
@@ -61,7 +61,7 @@ select#select {
 }
 
 .search-dropdown-container {
-  z-index: 6;
+  z-index: 8;
   position: absolute;
   top: 50px;
   width: 158px;
